"I worked on the login and signup views"

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
         <title>
             {% block title %}Exam{% endblock %}
         </title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         {% block content %}
